# AInstein

./: .env  .gitignore  config.yaml  pyproject.toml  run.sh  streamlit_ui.py
src/: __init__.py
src/etl/: create_collection.py  ingest.py  model.py
src/llm/: chat.py  embed.py
src/ui/: streamlit_ui.py  streamlit_ui_extended.py
src/util/: util.py  version.py
