[tool.poetry]
name = "ainstein"
version = "0.1.0"
description = "A personal LLM RAG chatbot"
authors = ["Captain-Flippo <captain_flippo@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
omegaconf = "^2.3.0"
qdrant-client = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
